# indoor_positioning

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
config/: beacons.yml  zones.yml  zones_coordinate_test.yml  zones_template.yml
launch/: ips.launch  ips_plus.launch
rviz/: ips_map.rviz
scripts/: ips_map.py  map_init.py  positioning.py  positioning_plus.py  receiver.py
src/indoor_positioning/: positioning.py  positioning_plus.py
src/indoor_positioning/communication/: usb_serial.py
src/ros_ips/: beacon.py  positioning.py  positioning_plus.py  serial_com.py  zone.py
src/ros_ips/communication/: tcp_socket.py
test/: zones_coordinate_test.yml
