<?xml version="1.0"?>
<package format="2">
  <name>indoor_positioning</name>
  <version>1.0.2</version>
  <description>
    This is a ROS package for the metraTec Indoor Positioning System.
    You can use the regular IPS for zone location of your robot
    or the IPS+ products for 3D-position-estimation using UWB ranging.
  </description>

  <maintainer email="arndt@metratec.com">Christian Arndt</maintainer>

  <license>BSD 2-Clause License</license>

  <url type="repository">https://github.com/metratec/indoor_positioning</url>

  <author email="arndt@metratec.com">Christian Arndt</author>

  <!-- Package dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>python-serial</build_export_depend>
  <build_export_depend>python-yaml</build_export_depend>
  <build_export_depend>python-numpy</build_export_depend>
  <build_export_depend>python-scipy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
